Revision history for Perl module Perl::Dist

0.29_03 Fri  9 Nov 2007
	- Completing install_perl_588
	- Completing install_distribution
	- Completing install_module
	- Adding pexports to the list of binaries to install

0.29_02 Thu 31 Oct 2007
        - Adding install_file support for tweaking stuff
          post-installation of binaries/perl/dists/etc
        - Removed post_copy and replaced with install_file
        - Renamed pre_copy to patch since it makes more sense
          that way now.

0.29_01 Wed 31 Oct 2007
	- Experimental release, only intended for review
	- Huge refactoring
	
0.10  Fri 19 Oct 2007
        - Converting from config-driver to code-driven
        - Implementing data classes for Inno
        - Implementing data classes for "Assets"
        - Converting binary-installation and source-compilation
          to the new class structure.
        - Adding various tests scripts.

0.0.5 Tue Aug 29 05:51:10 EDT 2006
	- fixed up version numbering format from Module::Install

0.0.4 Tue Aug 29 00:10:26 EDT 2006
	- Changed version numbering
	- Forced install of CPAN modules no longer dies if modules can't
	  be confirmed up to date.
	  (Hack to work around Bundle::CPAN with a specific file to install.)

0.000003 Mon Aug  7 07:23:55 EDT 2006
	- Added support for distributions names to modules section
	  to allow installation of developer releases (e.g. CPAN)
	- Removed Sub::Exporter from dependencies (not used)    

0.000002 Mon Jul 10 07:47:09 EDT 2006
	- Forgot to switch Builder.pm to YAML from YAML::Syck
    
0.000001 Sun Jul  9 13:30:10 EDT 2006
	- refactored build scripts from Perl::Dist::Vanilla to a module
	  in Perl::Dist::Builder