@@ -28,4 +28,3 @@ isa_ok( $dist, 't::lib::Test1' );
 ok( $dist->run, '->run ok' );
 ok( -f "C:\\tmp\\sp\\image\\dmake\\bin\\dmake.exe", 'Found dmake.exe' );
 ok( -f "C:\\tmp\\sp\\image\\dmake\\bin\\startup\\Makefile.in", 'Found startup' );
-ok( -f "C:\\tmp\\sp\\image\\dmake\\bin\\pexports.exe", 'Found pexports' );
